# taller-tpFinal-1c2021

./: .gitignore  CMakeLists.txt  README.md  installer.sh
Client/: main.cpp
Client/src/: CMakeLists.txt  Client.cpp  Client.h  ClientEvent.cpp  ClientEvent.h  EventSenderThread.cpp  Lobby.h  PlayerInformation.cpp  PlayerInformation.h
Client/src/ClientConfiguration/: ClientConfiguration.cpp  ClientConfiguration.h  ClientConfiguration.yaml
Client/src/ClientEvents/: ModelEvent.cpp  ModelEvent.h  MoveEvent.cpp  MoveEvent.h  StartGameEvent.cpp  StartGameEvent.h
Client/src/ClientEvents/Game/: AttackEvent.cpp  AttackEvent.h  BuyBulletsEvent.cpp  BuyBulletsEvent.h  BuyWeaponEvent.cpp  BuyWeaponEvent.h  ChangeAngleEvent.cpp  ChangeAngleEvent.h  ChangeWeaponEvent.cpp  ChangeWeaponEvent.h  DeactivateBombEvent.cpp  DeactivateBombEvent.h  DropWeaponEvent.cpp  DropWeaponEvent.h  GrabWeaponEvent.cpp  GrabWeaponEvent.h  PlantBombEvent.cpp  PlantBombEvent.h  StartDeactivateBombEvent.cpp  StartDeactivateBombEvent.h  StartPlantBombEvent.cpp  StartPlantBombEvent.h  StopAttackingEvent.cpp  StopAttackingEvent.h  StopDeactivateBombEvent.cpp  StopDeactivateBombEvent.h  StopPlantBombEvent.cpp  StopPlantBombEvent.h
Client/src/ClientEvents/Game/Move/: MoveEvent.cpp  MoveEvent.h
Client/src/ClientEvents/Lobby/: CreateMatchEvent.cpp  CreateMatchEvent.h  JoinMatchEvent.cpp  JoinMatchEvent.h  ReceiveMapsEvent.cpp  ReceiveMapsEvent.h  ReceiveMatchesEvent.cpp  ReceiveMatchesEvent.h  SendUserNameEvent.cpp  SendUserNameEvent.h  StartGameEvent.cpp  StartGameEvent.h
Client/src/CommunicationThreads/: EventSenderThread.cpp  EventSenderThread.h  ModelRecieverThread.cpp  ModelRecieverThread.h
Client/src/Game/: Game.cpp  Game.h  GameMap.cpp  GameMap.h
Client/src/GameView/: Attack.h  AttackEffect.cpp  AttackEffect.h  Camera.cpp  Camera.h  ClientBomb.cpp  ClientBomb.h  ClientCharacter.cpp  ClientCharacter.h  ClientPlayer.cpp  ClientPlayer.h  FinalPhase.cpp  FinalPhase.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  Hud.cpp  Hud.h  InitialFase.cpp  InitialFase.h  InitialPhase.cpp  InitialPhase.h  Player.cpp  Player.h  SoundHandler.cpp  SoundHandler.h  SpriteContainer.cpp  SpriteContainer.h  Stencil.cpp  Stencil.h  Tile.cpp  Tile.h  TileContainer.cpp  TileContainer.h  WeaponSprite.cpp  WeaponSprite.h
Client/src/GameView/Characters/: ClientCharacter.h  ClientPlayer.cpp  ClientPlayer.h  Hud.h  Stencil.cpp  Stencil.h  WeaponSprite.h
Client/src/GameView/Containers/: SpriteContainer.cpp  SpriteContainer.h  TileContainer.cpp
Client/src/GameView/Effects/: Attack.cpp  AttackEffect.cpp  AttackEffect.h  ClientBomb.cpp  ClientBomb.h
Client/src/GameView/Map/: Camera.cpp  Camera.h  GameMap.cpp  GameMap.h  Tile.cpp  Tile.h
Client/src/GameView/Phases/: FinalPhase.cpp  FinalPhase.h  InitialPhase.cpp
Client/src/GameView/Sdl/: Button.h  Cursor.h  Renderer.cpp  Renderer.h  Texture.cpp  Window.cpp  Window.h
Client/src/GameView/Sound/: SoundHandler.cpp  SoundHandler.h
Client/src/GameView/sdl/: Button.h  Cursor.cpp  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Client/src/Initiator/: Initiator.cpp  Initiator.h  Parser.cpp  Parser.h  TypeOfLine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/src/Initiator/window/: MapsWidget.cpp  MapsWidget.h  MatchesWidget.cpp  MatchesWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/src/Lobby/: Initiator.cpp  Initiator.h  Lobby.cpp  Lobby.h
Client/src/Render/: FrameLimiter.cpp  Renderer.cpp  Renderer.h
Client/src/Render/sdl/: Renderer.cpp  Renderer.h  SDLException.h  Texture.cpp  Window.cpp  Window.h
Client/src/ServerEventHandlers/: ModelEventHandler.cpp  ModelEventHandler.h  ReceiveInitConfigsHandler.cpp  ReceiveInitConfigsHandler.h  ReceiveSquadsHandler.cpp  ReceiveSquadsHandler.h  ReciveMapHandler.cpp  ReciveMapHandler.h  ReciveStepHandler.cpp  ReciveStepHandler.h  ReciveWeaponHandler.cpp  ReciveWeaponHandler.h
Client/src/ServerEventHandlers/Error/: ConectionFailedHandler.cpp  ConectionFailedHandler.h
Client/src/ServerEventHandlers/Final/: GameOverHandler.cpp  GameOverHandler.h  ReceiveFinalStateHandler.cpp  ReceiveFinalStateHandler.h  ReceiveStatsHandler.cpp  ReceiveStatsHandler.h
Client/src/ServerEventHandlers/Initial/: ReceiveBuysHandler.cpp  ReceiveBuysHandler.h  ReceiveInitPlayersHandler.cpp  ReceiveInitPlayersHandler.h  ReceiveInitStepHandler.cpp  ReceiveInitStepHandler.h
Client/src/ServerEventHandlers/Playing/: ReceiveAttacksHandler.cpp  ReceiveAttacksHandler.h  ReceiveBombStateHandler.cpp  ReceiveBombStateHandler.h  ReceivePlayingStepHandler.cpp  ReceivePlayingStepHandler.h
Common/: BlockingQueue.h  CMakeLists.txt  ClientEvent.cpp  ClientEvent.h  Event.cpp  Event.h  Exception.cpp  Exception.h  ExceptionClosedQueue.h  ExceptionMatchFull.h  ExceptionMatchStarted.h  ExceptionSocketClosed.h  GameWorldTypes.h  ModelEvent.cpp  ModelEvent.h  MoveEvent.cpp  MoveEvent.h  ProtectedQueue.h  Protocol.cpp  Protocol.h  Socket.cpp  Socket.h  StartGameEvent.cpp  StartGameEvent.h  Thread.cpp  Thread.h  TypesOfEvents.h
Common/Communication/: ExceptionSocketClosed.h  Protocol.cpp  Protocol.h  Socket.cpp
Common/Configuration/: CommonConfiguration.yaml
Common/DataStructures/: ExceptionClosedQueue.h  ProtectedQueue.h  WeaponType.h
Common/Event/: BombState.h  Event.cpp  Event.h  FaseType.h  ReasonFinish.h  Team.cpp  Team.h  TypesOfEvents.h
Common/Exception/: ExceptionInvalidCommand.h
Common/Paths/: Paths.h
Common/Thread/: Thread.cpp  Thread.h
Common/YamlParser/: MapConfigParser.cpp  MapConfigParser.h
Editor/build-map_editor-Desktop_Qt_5_12_5_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  map_editor
Editor/configs/: 2_terrorist_2_counter.yaml  (+22 more)
Editor/map_editor/: CMakeLists.txt  editor_cell.cpp  editor_cell.h  editor_cell_type.h  editor_map.cpp  editor_map.h  editor_window.cpp  editor_window.h  editor_window.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Server/: CMakeLists.txt  main.cpp
login/login/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+248 files in other folders)
